src/objects/System_Pricing_Table__c.object
<CustomObject>
    <fields>
        <fullName>Community_Program_Offer_Name__c</fullName>
        <formula>Community_Program_Offer__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Community Program Offer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Program Offer</label>
        <referenceTo>Community_Program_Offer__c</referenceTo>
        <relationshipLabel>System Pricing Table</relationshipLabel>
        <relationshipName>System_Pricing_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Program_Tier__c</fullName>
        <label>Community Program Tier</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Count_100_Root_Price__c</fullName>
        <label>Count 100 Root Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count_101_Root_Price__c</fullName>
        <label>Count 101 Root Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count_102_Root_Price__c</fullName>
        <label>Count 102 Root Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalator__c</fullName>
        <label>Escalator</label>
        <precision>7</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financing_Type__c</fullName>
        <label>Financing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Fund</label>
        <referenceTo>Lease_Fund__c</referenceTo>
        <relationshipLabel>System Pricing Table</relationshipLabel>
        <relationshipName>System_Pricing_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Panel_Description__c</fullName>
        <formula>Panel_Type__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Panel Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Type__c</fullName>
        <label>Panel Type</label>
        <referenceTo>System_Design_Product__c</referenceTo>
        <relationshipLabel>System Pricing Table</relationshipLabel>
        <relationshipName>System_Pricing_Table</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pricing_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Region</label>
        <referenceTo>Pricing_Region__c</referenceTo>
        <relationshipLabel>System Pricing Table</relationshipLabel>
        <relationshipName>System_Pricing_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Astrum Sales Region</label>
        <referenceTo>Astrum_Sales_Region__c</referenceTo>
        <relationshipLabel>System Pricing Table</relationshipLabel>
        <relationshipName>System_Pricing_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>System Pricing Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Unique_Id__c</columns>
        <columns>Pricing_Region__c</columns>
        <columns>Community_Program_Offer__c</columns>
        <columns>Panel_Type__c</columns>
        <columns>Lease_Fund__c</columns>
        <columns>Community_Program_Tier__c</columns>
        <columns>Financing_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SPT-{000000}</displayFormat>
        <label>System Pricing Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Pricing Table</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>